# DogeVk

./: .gitignore  CMakeLists.txt  CMakeLists_include.txt  basic_allocators.h  camera.cpp  camera.h  config.h  custom_types.h  debug_report.cpp  debug_report.h  dedicated_buffer.cpp  dedicated_buffer.h  device.cpp  device.h  device_buffer_allocator.cpp  device_buffer_allocator.h  doge_vulkan.cpp  doge_vulkan.h  forward.cpp  forward.h  glfw_window.cpp  glfw_window.h  global_descriptor_sets.cpp  global_descriptor_sets.h  image.h  instance.cpp  instance.h  light.h  main.cpp  material.cpp  material.h  memory.cpp  memory.h  mesh.cpp  mesh.h  model.cpp  model.h  physical_device.cpp  physical_device.h  scene.cpp  (+14 more)
cmake/: FindGLM.cmake
shaders/: global_descriptor_sets.h  shadow.vert  simple.frag  simple.vert
